# project_name_pycalc

./: .gitignore  README.md  main.py  pyproject.toml
calculator/: __init__.py  history.py  io.py  operations.py  parser.py
tests/: test_operations.py  test_parser.py
